--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,22 +22,20 @@
       </nav>
 
         <hr />
-
         <div class="content">
             <%= @post.content %>
         </div>
-
     </div>
 </section>
 
 <section class="comments">
     <div class="container">
-        <h2 class="subtitle is-5"> <strong>5</strong> Comments</h2>
-        post comments
+        <h2 class="subtitle is-5"> <strong><%= @post.comments.count %></strong> Comments</h2>
+        <%= render @post.comments %>
         <div class="comment-form">
             <hr />
-            <h3 class="subtitle is-3"> Leave a reply</h3>
-            <%# <%= render 'comments/form' %>
+            <h3 class="subtitle is-4"> Leave a comment</h3>
+            <%= render 'comments/form'%>
         </div>
     </div>
 </section>
